--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "swf-extract": "src/index.js",
     "hse": "src/index.js"
   },
+  "scripts": {
+    "start": "node src/index.js --in ./in/ --out ./out/"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/higoka/habbo-swf-extractor.git"
@@ -42,6 +45,11 @@
   "dependencies": {
     "@gizeta/swf-reader": "^1.0.0",
     "jimp": "^0.16.1",
-    "minimist": "^1.2.5"
+    "minimist": "^1.2.5",
+    "typescript": "^4.5.4"
+  },
+  "devDependencies": {
+    "ts-node": "^10.4.0",
+    "ts-node-dev": "^1.1.8"
   }
 }
