--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "hse": "src/index.js"
   },
   "scripts": {
-    "start": "node src/index.js --in ./in/ --out ./out/"
+    "start": "node src/index.js --in ./in/ --out ./out/",
+    "lint": "eslint --ext .js,.ts ./src --color --fix"
   },
   "repository": {
     "type": "git",
@@ -49,6 +50,15 @@
     "typescript": "^4.5.4"
   },
   "devDependencies": {
+    "@types/node": "^17.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
+    "eslint": "^8.6.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^16.1.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8"
   }
