--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "@gizeta/swf-reader": "^1.0.0",
     "jimp": "^0.16.1",
     "minimist": "^1.2.5",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "zlib": "^1.0.5"
   },
   "devDependencies": {
     "@types/node": "^17.0.9",
